tests/baselines/reference/indexSignatureTypeCheck2.errors.txt
==== tests/cases/compiler/indexSignatureTypeCheck2.ts (6 errors) ====
    class IPropertySet {
        [index: string]: any
    }
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    // 766379
    //ps[index] = 12;
    
    // BUG 765883
    interface indexErrors {
        [p2?: string]
        [...p3: any[]]
        [p4: string, p5?: string]
                   ~
!!! indexSignatureTypeCheck2.ts(14,16): error TS1005: ']' expected.
                                ~
!!! indexSignatureTypeCheck2.ts(14,29): error TS1005: ';' expected.
        ~~~~~~~~~~~
!!! indexSignatureTypeCheck2.ts(14,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	indexSignatureTypeCheck2.ts(12,5)
        [p6: string, ...p7: any[]]
                   ~
!!! indexSignatureTypeCheck2.ts(15,16): error TS1005: ']' expected.
                     ~~~
!!! indexSignatureTypeCheck2.ts(15,18): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
                                 ~
!!! indexSignatureTypeCheck2.ts(15,30): error TS1005: ';' expected.
    }